@@ -1,3 +1,4 @@
+(r2370) Fix vanilla inconsistencies in placing the item graphics and the "unload ammo" button between tactical and map screen.
 (r2368) Fix vanilla inconsistencies in placing the item name/calibre/amount of money texts in the item description box.
 (r2366) Fix a vanilla display glitch: When adding/removing an attachment in the map screen, the tooltips did not get updated.
 (r2365) Fix a vanilla graphical glitch: A graphic was misplaced by one pixel in the item description box for money in the map screen.
